# dmv

./: Cargo.toml  README.md  build.rs  rustfmt.toml
disk_backed/: Cargo.toml
helper-scripts/: git-dot  git-examine-object
prototype/: .gitignore  Cargo.toml  build.rs  rustfmt.toml
prototype/disk_backed/: Cargo.toml
prototype/disk_backed/src/: lib.rs
prototype/error_context/: Cargo.toml
prototype/error_context/src/: lib.rs
prototype/human_readable/: Cargo.toml
prototype/human_readable/src/: lib.rs
prototype/humanreadable/: Cargo.toml
prototype/humanreadable/src/: lib.rs
prototype/progress/: Cargo.toml
prototype/progress/src/: main.rs
prototype/src/: cache.rs  cli.yaml  cmd.rs  constants.rs  dag2.rs  encodable.rs  error.rs  file_store.rs  find_repo.rs  fs_transfer.rs  fsutil.rs  humanreadable.rs  ignore.rs  item.rs  lib.rs  main.rs  object_store.rs  objectstore.rs  objectstore2.rs  pipeline.rs  progress.rs  repo.rs  revisions.rs  rolling_hash.rs  rollinghash.rs  siprefix.rs  status.rs  testutil.rs  variance.rs  walker.rs  work_dir.rs  workdir.rs  wrapperstruct.rs
prototype/src/dag/: blob.rs  chunked_blob.rs  chunkedblob.rs  commit.rs  hash.rs  mod.rs  object_key.rs  objecthandle.rs  objectkey.rs  tree.rs
prototype/src/dag2/: blob.rs  chunkedblob.rs  mod.rs  objectkey.rs  tree.rs
prototype/src/objectstore/: mod.rs
prototype/src/repo3/: mod.rs
prototype/src/repo4/: mod.rs
prototype/src/repository/: disk.rs  mod.rs
prototype/testutil/: Cargo.toml
prototype/testutil/src/: lib.rs
prototype/variance/: Cargo.toml
prototype/variance/src/: lib.rs
prototype/walker/: Cargo.toml
prototype/walker/src/: lib.rs
prototype/wrapperstruct/: Cargo.toml
prototype/wrapperstruct/src/: lib.rs
(+40 files in other folders)
