[package]
name = "prototype"
version = "0.1.0"
authors = ["Mike Murphy <codermurph@sleepymurph.com>"]

[lib]
name = "prototypelib"
path = "src/lib.rs"

[[bin]]
name = "prototype"
path = "src/main.rs"

[dependencies]
byteorder = "0.5"
clap = {version = "2", features = ["yaml"]}
error-chain = "0.7.2"
rand = "0.3"
rustc-serialize = "0.3"
rust-crypto = "0.2"
tempdir = "0.3"
walkdir = "1"
