[package]
name = "prototype"
version = "0.1.0"
authors = ["Mike Murphy <codermurph@sleepymurph.com>"]

[lib]
name = "prototype"
path = "src/lib.rs"

[[bin]]
name = "prototype"
path = "src/main.rs"
doc = false

[dependencies]
byteorder = "0.5"
clap = {version = "2", features = ["yaml"]}
error-chain = "0.7.2"
log = "0.3"
env_logger = "0.3"
rustc-serialize = "0.3"
rust-crypto = "0.2"

humanreadable = { path = "humanreadable" }
testutil = { path = "testutil" }
wrapperstruct = { path = "wrapperstruct" }
